# cpe-s9

./: .gitignore  CMakeLists.txt  README.md
app/: README.md  scenario.txt
app/backend/: console.py  joke.py  log.txt  main.py  requirements.txt
app/pepper/: app.py
app/tablet/: .gitignore  deploy.js  package-lock.json  package.json  tsconfig.json
app/tablet/public/: index.html  qimessaging.js
app/tablet/src/: index.scss  index.tsx
app/tablet/src/config/: drinks.ts  qi.ts  steps.ts  theme.ts  window.d.ts
app/tablet/src/view/: helper.ts
esp32/: .gitignore  CMakeLists.txt  platformio.ini
esp32/src/: main.cpp
esp32/src/components/: btn.cpp  btn.h  mqtt.cpp  mqtt.h  thermometer.cpp  thermometer.h  util.cpp  util.h  wifi.cpp  wifi.h
global-planner/src/navigation_stage_student_tp/scripts/: ShortPathMng.py
local-planner/src/turtlebot_gazebo/worlds/: Empty.world
merge-planner/src/dep_packages/kobuki/: README.markdown
merge-planner/src/dep_packages/turtlebot/: README.md
merge-planner/src/local_planner_student/: README.md  package.xml
merge-planner/src/navigation_stage_student_tp/: package.xml
merge-planner/src/turtlebot_gazebo/: Tp.md  Tp2.md  package.xml  readme.md
merge-planner/src/turtlebot_simulator/: package.xml
merge-planner/src/turtlebot_stage/: package.xml
merge-planner/src/turtlebot_stdr/: package.xml
mqtt/: docker-compose.yml  mosquitto.conf
mqtt/data/data/: mosquitto.db
src/: main.cpp  thermometer.cpp  thermometer.h  wifi.cpp  wifi.h
stm32/ethernet/LwIP_HTTP_Server_Netconn_RTOS/: .project  readme.txt
(+471 files in other folders)
